--- a/static/staticHtml/headImg.html
+++ b/static/staticHtml/headImg.html
@@ -459,7 +459,7 @@
 						}
 
 						ajax({
-							url:'http://localhost:9000/methods/updateImgInfo.json',
+							url:'http://119.23.226.248:80/methods/updateImgInfo.json',
 							method:'POST',
 							data:JSON.stringify(postData),
 							success:function(data){
